Still adding styles

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ position:relative;
 display:none;
 position:absolute;
 background:white;
-color:black;
+color:peachpuff;
 list-style:none;
 padding:10px;
 }
