cleaning style.css

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ font-family:Arial;
 display:flex;
 justify-content:space-between;
 align-items:center;
-background:#222;
+background:#3a202d;
 padding:15px;
 color:white;
 position:sticky;
